# openwrt-custom-feed

./: .gitattributes  Config.in
owsd-nano/: CMakeLists.txt  Config.in  Makefile  README.md
owsd-nano/cmake/modules/: FindLIBUBOX.cmake  FindLIBUBUS.cmake  FindUBUS.cmake  Findlibwebsockets.cmake
owsd-nano/files/: owsd.config  owsd.init
owsd-nano/src/: rpc_call.h
